Changes made based on Migules comments on previous PR Added /events endpoint to the swagger and created endpoint. Added code to work with gRPC server with the event-sdk Updated version
