# src/interface/swagger.json
@@ -57,6 +57,58 @@
                     }
                 }
             }
+        },
+        "/event": {
+            "post": {
+                "description": "The HTTP request POST /event is a REST endpoint to add an event to a Kafka Topic.",
+                "summary": "Post Event",
+                "tags": [
+                    "api"
+                ],
+                "operationId": "PostEvent",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/EventPayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "$ref": "#/responses/Response201"
+                    },
+                    "400": {
+                        "$ref": "#/responses/ErrorResponse400"
+                    },
+                    "401": {
+                        "$ref": "#/responses/ErrorResponse401"
+                    },
+                    "403": {
+                        "$ref": "#/responses/ErrorResponse403"
+                    },
+                    "404": {
+                        "$ref": "#/responses/ErrorResponse404"
+                    },
+                    "405": {
+                        "$ref": "#/responses/ErrorResponse405"
+                    },
+                    "406": {
+                        "$ref": "#/responses/ErrorResponse406"
+                    },
+                    "501": {
+                        "$ref": "#/responses/ErrorResponse501"
+                    },
+                    "503": {
+                        "$ref": "#/responses/ErrorResponse503"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -177,6 +229,161 @@
                 "versionNumber": {
                     "type": "string",
                     "description": "Current version of the API"
+                }
+            }
+        },
+        "EventPayload": {
+            "title": "EventPayload",
+            "type": "object",
+            "description": "Data model for the complex type EventPayload.",
+            "properties": {
+                "from": {
+                    "type": "string",
+                    "description": "The initiator of the message"
+                },
+                "to": {
+                    "type": "string",
+                    "description": "The recipient of the message"
+                },
+                "id": {
+                    "type": "string",
+                    "description": "Unique identifier for message"
+                },
+                "content": {
+                    "$ref": "#/definitions/Content"
+                },
+                "type": {
+                    "type": "string",
+                    "description": "The type of the payload i.e. application/json"
+                },
+                "metadata": {
+                    "$ref": "#/definitions/Metadata"
+                }
+            }
+        },
+        "Content": {
+            "title": "Content",
+            "type": "object",
+            "description": "Content object in EventPayload",
+            "properties": {
+                "headers": {
+                    "$ref": "#/definitions/Headers"
+                },
+                "payload": {
+                    "type": "string",
+                    "description": "base 64 encrypted payload for processing"
+                }
+            }
+        },
+        "Headers": {
+            "title": "Headers",
+            "type": "object",
+            "description": "Headers passed in kafka message",
+            "properties": {
+                "content-type": {
+                    "type": "string",
+                    "description": "Content type for message"
+                },
+                "date": {
+                    "type": "string",
+                    "description": "A UTC format of the date"
+                },
+                "fspiop-source": {
+                    "type": "string",
+                    "description": "The FSP that the message originated from"
+                },
+                "fspiop-destination": {
+                    "type": "string",
+                    "description": "The FSP that the message is going to"
+                }
+            }
+        },
+        "Metadata": {
+            "title": "Metadata",
+            "type": "object",
+            "description": "The metadata of the Kafka message",
+            "properties": {
+                "event": {
+                    "$ref": "#/definitions/Event"
+                },
+                "trace": {
+                    "$ref": "#/definitions/Trace"
+                }
+            }
+        },
+        "Event": {
+            "title": "Event",
+            "type": "object",
+            "description": "The event object of the metadata",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "description": "The FSP that the message is going to"
+                },
+                "type": {
+                    "type": "string",
+                    "description": "The FSP that the message is going to"
+                },
+                "action": {
+                    "type": "string",
+                    "description": "The FSP that the message is going to"
+                },
+                "createdAt": {
+                    "type": "string",
+                    "description": "The FSP that the message is going to"
+                },
+                "state": {
+                    "$ref": "#/definitions/State"
+                },
+                "responseTo": {
+                    "type": "string",
+                    "description": "Response UUID for previous message"
+                }
+            }
+        },
+        "Trace": {
+            "title": "Trace",
+            "type": "object",
+            "description": "The trace object for auditing and logging",
+            "properties": {
+                "service": {
+                    "type": "string",
+                    "description": "The API the message is going through"
+                },
+                "traceId": {
+                    "type": "string",
+                    "description": "The traceId for the span of the message"
+                },
+                "parentSpanId": {
+                    "type": "string",
+                    "description": "The parentId of the span"
+                },
+                "spanId": {
+                    "type": "string",
+                    "description": "The Id for the span of the process"
+                },
+                "timestamp": {
+                    "type": "string",
+                    "description": "The current timestamp of the message"
+                }
+            }
+        },
+        "State": {
+            "title": "State",
+            "type": "object",
+            "description": "The current state of the message",
+            "properties": {
+                "status": {
+                    "type": "string",
+                    "description": "The status of the message"
+                },
+                "code": {
+                    "type": "number",
+                    "description": "Error code"
+                },
+                "description": {
+                    "type": "string",
+                    "description": "The description of the error code"
                 }
             }
         }
@@ -358,6 +565,12 @@
             "type": "string",
             "required": true,
             "description": "The Date header field indicates the date when the request was sent."
+        },
+        "ID": {
+            "name": "ID",
+            "in": "path",
+            "required": true,
+            "type": "string"
         }
     }
 }
